--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,15 +34,11 @@ jobs:
         with:
           node-version: 20
 
-      - name: Instalar dependências do backend
-        working-directory: server
-        run: npm install
-
-      - name: Corrigir permissões do ts-node
-        run: chmod +x ./node_modules/.bin/ts-node
-
-      - name: Corrigir permissões do Playwright
-        run: chmod +x ./node_modules/.bin/playwright
+      - name: Instalar dependências e corrigir permissões
+        run: |
+          npm install
+          chmod +x ./node_modules/.bin/ts-node
+          chmod +x ./node_modules/.bin/playwright
 
       - name: Rodar migrations e seeds
         working-directory: server
