--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,15 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    # ✅ Variáveis globais para o job inteiro
+    env:
+      PG_HOST: localhost
+      PG_PORT: 5432
+      PG_USER: devuser
+      PG_PASSWORD: devpass
+      PG_DATABASE: devdb
+      PORT: 5000
+
     services:
       postgres:
         image: postgres:15-alpine
@@ -43,36 +52,44 @@ jobs:
           chmod +x ./node_modules/.bin/playwright
 
       - name: Rodar migrations e seeds
-        working-directory: ./server
-        env:
-          PG_HOST: localhost
-          PG_PORT: 5432
-          PG_USER: devuser
-          PG_PASSWORD: devpass
-          PG_DATABASE: devdb
+        working-directory: server
         run: |
           node -r ts-node/register src/scripts/create-tables.ts
           node -r ts-node/register src/scripts/seed.ts
 
+      - name: Iniciar servidor da API em segundo plano
+        working-directory: server
+        run: |
+          nohup npm run dev > server.log 2>&1 &
+
+      - name: Esperar servidor da API subir
+        run: |
+          n=0
+          until curl -s http://localhost:5000/api/projects > /dev/null || [ $n -ge 10 ]; do
+            echo "Aguardando API subir..."
+            n=$((n+1))
+            sleep 2
+          done
+
       - name: Rodar testes da API (Playwright)
-        working-directory: ./server
+        working-directory: server
         run: |
           npx playwright install --with-deps
           npx playwright test
-
+      
       # Front-end -------------------------------------------
-      - name: Instalar dependências do frontend e corrigir permissões
-        working-directory: ./client
+      - name: Instalar dependências do frontend
+        working-directory: client
         run: |
           npm install
           chmod +x ./node_modules/.bin/playwright
 
       - name: Rodar testes da interface (Playwright)
-        working-directory: ./client
+        working-directory: client
         run: |
           npx playwright install --with-deps
           npx playwright test
 
       - name: Build frontend
-        working-directory: ./client
+        working-directory: client
         run: npm run build
