--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "node src/index.ts",
-    "dev": "nodemon src/index.ts",
+    "dev": "node -r ts-node/register src/index.ts",
     "test": "jest"
   },
   "keywords": [],
