--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,9 +83,10 @@ jobs:
       
       # Front-end -------------------------------------------
       - name: Iniciar client React em segundo plano
-        working-directory: client
+        working-directory: ./client
         run: |
           npm run dev > $GITHUB_WORKSPACE/client.log 2>&1 &
+          echo "Cliente iniciado em background"
 
       - name: Esperar client subir
         run: |
