Incusão da linha dev no package.json do client

--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "ts-node src/index.ts",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint --fix src",
