--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,9 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "outDir": "dist",
-    "noEmit": false
+    "noEmit": false,
+    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "types": ["node", "express"]
   },
   "include": ["src"]
 }
