--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "multer": "^2.0.2",
     "pg": "^8.16.3"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/knex": "^0.15.2",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.1.0",
     "@types/pg": "^8.15.5",
     "playwright": "^1.54.2",
